# thermux

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  temp_min.html
.github/workflows/: build.yml  create-release-tag.yml  tests.yml
docs/: openapi.yaml
enclosure/: README.md
enclosure/fusion360/: .gitkeep  Thermux Temperature Node.f3d
enclosure/print/: .gitkeep  Base.3mf  Lid.3mf
enclosure/step/: .gitkeep  Thermux Temperature Node.step
hardware/: .gitignore  README.md
hardware/gerbers/: .gitkeep  BOM-temp_node.csv  CPL-temp_node.csv  temp_node-CuBottom.gbr  temp_node-CuTop.gbr  temp_node-EdgeCuts.gbr  temp_node-MaskBottom.gbr  temp_node-MaskTop.gbr  temp_node-NPTH.drl  temp_node-PTH.drl  temp_node-SilkBottom.gbr  temp_node-SilkTop.gbr
hardware/kicad/: .gitkeep  temp_node.kicad_pcb  temp_node.kicad_pro  temp_node.kicad_sch
main/: CMakeLists.txt  Kconfig.projbuild  ethernet_manager.c  log_buffer.c  log_buffer.h  main.c  mqtt_client_ha.c  mqtt_client_ha.h  nvs_storage.c  nvs_storage.h  onewire_temp.c  onewire_temp.h  ota_updater.c  ota_updater.h  sensor_manager.c  sensor_manager.h  version_utils.c  version_utils.h  web_server.c  wifi_manager.c  wifi_manager.h
main/html/: config.html  index.html  ota.html
scripts/: gzip_html.py  html_minifier.py  minify_html.py
test/: .gitignore  CMakeLists.txt  test_address_utils.c  test_runner.c  test_version_compare.c
test/unity/: CMakeLists.txt
test/unity/src/: unity.c  unity.h
